fixed icon alignment

--- a/web/index.css
+++ b/web/index.css
@@ -37,8 +37,9 @@ th {
 	padding: 5px;
 }
 
-td img {
-	padding-left: 3px;
+.name-container img {
 	width: 20px;
 	height: 20px;
+	vertical-align: middle;
+	padding-left: 3px;
 }
